# azmonitor

./: .gitignore  Cargo.toml  README.md
src/: bean.rs  build.rs  config.rs  gitblame.rs  main.rs  monitor.rs  notice.rs  parseflow.rs  style.rs  utli.rs
