[package]
name = "azmonitor"
version = "0.1.0"
edition = "2021"

[dependencies]
humantime = "2.1"
anyhow = "1"
futures = "0.3"
regex="1"
mysql = "24.0.0"
serde_json = "1.0"
#chrono = "0.4"
chrono = { version = "0.4", features = ["serde"] }

log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.0", features = ["full"] }
flate2 = "1.0"
dotenv = "0.15"
serde = { version = "1.0.219", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[profile.dev]
opt-level = 0
debug = true
